force-app/main/default/objects/Contact/fields/LINE_Invite_Code__c.field-meta.xml
<CustomField>
    <fullName>LINE_Invite_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >One-time QR invite code (alphabet A-H, J-N, P-Z, 2-9). Cleared once used.</description>
    <externalId>true</externalId>
    <label>LINE Invite Code</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>