force-app/main/default/objects/Contact/fields/LINE_Invite_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>LINE_Invite_Expires_At__c</fullName>
    <description>When the invite code stops working.</description>
    <label>LINE Invite Expires At</label>
    <type>DateTime</type>
</CustomField>