force-app/main/default/objects/Contact/fields/LINE_OA_Configuration__c.field-meta.xml
<CustomField>
    <fullName>LINE_OA_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The Contact's primary LINE OA. The chat panel opens this OA's conversation first. Set when first linked, if blank.</description>
    <label>LINE OA</label>
    <referenceTo>LINE_OA_Configuration__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>