force-app/main/default/objects/Contact/fields/LINE_User_Id__c.field-meta.xml
<CustomField>
    <fullName>LINE_User_Id__c</fullName>
    <description
  >The customer's LINE user ID. Identity across all of the company's LINE OAs; used to auto-link new conversations. Set when linked.</description>
    <externalId>true</externalId>
    <label>LINE User ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>